frontend/src/_styles/theme.scss
/* ... */
.empty-welcome-header {
  font-style: normal;
  font-weight: 500;
  font-size: 32px;
  line-height: 40px;
  margin-bottom: 16px;
  margin-top: 40px;
  color: #000;
  font-family: Inter;
}

.homepage-empty-image {
  width: 100%;
}

.empty-title {
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  display: flex;
  align-items: center;
  color: #687076;
}

// template card styles
.template-card-wrapper {
  display: flex;
  flex-direction: row;
  background: #fffffc;
  border: 1px solid #d2ddec;
  box-sizing: border-box;
  border-radius: 8px;
  width: 299px;
  height: 100px;
}

.template-action-wrapper {
  display: flex;
  flex-direction: row !important;
  font-family: Inter;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 19px;
  color: $primary-light;

  p {
    margin-right: 16px;
  }
}

.template-card-title {
  font-family: Inter;
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 22px;
  display: flex;
  align-items: center;
  color: #000000;
  margin-bottom: 3px !important;
  margin-top: 20px;
}

.template-card-details {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.template-icon-wrapper {
  width: 61.44px;
  height: 60px;
  top: 685px;
  background: #d2ddec;
  border-radius: 4px;
  margin: 20px 16.36px;
}

// template style end

.calendar-widget.compact {
  .rbc-time-view-resources .rbc-time-header-content {
    min-width: auto;
  }

  .rbc-time-view-resources .rbc-day-slot {
    min-width: 50px;
  }

  .rbc-time-view-resources .rbc-header,
  .rbc-time-view-resources .rbc-day-bg {
    width: 50px;
  }
}

.calendar-widget.dont-highlight-today {
  .rbc-today {
    background-color: inherit;
  }

  .rbc-current-time-indicator {
    display: none;
  }
}

.calendar-widget {
  padding: 10px;
  background-color: white;

  .rbc-day-slot .rbc-event,
  .rbc-day-slot .rbc-background-event {
    border-left: 3px solid #26598533;
  }

  .rbc-toolbar {
    font-size: 14px;
  }

  .rbc-event {
    .rbc-event-label {
      display: none;
    }
  }

  .rbc-off-range-bg {
    background-color: #f4f6fa;
  }

  .rbc-toolbar {
    .rbc-btn-group {
      button {
        box-shadow: none;
        border-radius: 0;
        border-width: 1px;
      }
    }
  }
}

//!for calendar widget week view with compact/spacious mode border fix
.resources-week-cls .rbc-time-column:nth-last-child(7n) {
  border-left: none !important;

  .rbc-timeslot-group {
    border-left: 2.5px solid #dadcde !important;
  }
}

.resources-week-cls .rbc-allday-cell {
  border: none !important;

  .rbc-row {
    border-left: 1.5px solid #dadcde;
    border-right: 1.5px solid #dadcde;
  }
}

.resources-week-cls .rbc-time-header-cell {
  border: none !important;
}

.resources-week-cls .rbc-time-view-resources .rbc-header {
  border-left: 1.5px solid #dadcde !important;
  border-right: 1.5px solid #dadcde !important;
}

.calendar-widget.hide-view-switcher {
  .rbc-toolbar {
    .rbc-btn-group:nth-of-type(3) {
      display: none;
    }
  }
}

.calendar-widget.dark-mode {
  background-color: #1d2a39;

  .rbc-toolbar {
    button {
      color: white;
    }

    button:hover,
    button.rbc-active {
      color: black;
    }
  }

  .rbc-off-range-bg {
    background-color: #2b394b;
  }

  .rbc-selected-cell {
    background-color: #22242d;
  }

  .rbc-today {
    background-color: #5a7ca8;
  }
}

.calendar-widget.dark-mode.dont-highlight-today {
  .rbc-today {
    background-color: inherit;
  }
}

.navbar .navbar-nav {
  min-height: 2rem;
}

.navbar-brand-image {
  height: 1.2rem;
}

.navbar .navbar-brand:hover,
.theme-dark .navbar .navbar-brand:hover {
  opacity: 1;
}

.nav-tabs .nav-link.active {
  font-weight: 400 !important;
  margin-bottom: -1px !important;
}

.nav-tabs .nav-link {
  font-weight: 400 !important;
  margin: 0 !important;
  height: 100%;
}

.code-editor-widget {
  border-radius: 0;

  .CodeMirror {
    border-radius: 0 !important;
    margin-top: -1px !important;
  }
}

.jet-listview {
  overflow-y: overlay;
  overflow-x: hidden;

  // .rows {
  // }

  // .list-item {
  // }
}
.jet-listview{
  .rows.w-100.pagination-margin-bottom-last-child{
    .list-item:last-child{
      margin-bottom: 50px;
    }
  }
}

.jet-listview::-webkit-scrollbar-track {
  background: transparent;
}

.jet-listview::-webkit-scrollbar-thumb {
  background: transparent;
}

.code-hinter-wrapper .popup-btn {
  position: absolute;
  display: none;
  cursor: pointer;
}

.code-hinter-wrapper:hover {
  .popup-btn {
    display: block !important;
    z-index: 1;
  }
}

.popup-btn {
  cursor: pointer !important;
  display: block;
}

.preview-icons {
  margin-top: -5px;
  width: 12px;
}

.resize-modal-portal {
  z-index: 3;

  .resize-modal {
    .modal-content {
      width: 100% !important;
      height: 100%;

      .modal-body {
        width: 100% !important;
        height: calc(100% - 44px) !important;

        .editor-container {
          height: 100%;

          .CodeMirror {
            height: 100% !important;
          }
        }
      }
    }

    .portal-header {
      width: 100% !important;
    }

    .resize-handle {
      cursor: move;
    }
  }
}
/* ... */

